v4.5 - disable GSAP animations + fixed backgrounds on mobile for performance

--- a/css/style.css
+++ b/css/style.css
@@ -1015,6 +1015,7 @@ img {
     
     .panel {
         padding: 60px 20px 60px 50px;
+        background-attachment: scroll !important;
     }
     
     .gas-badge img {
